--- a/angular/compose.yaml
+++ b/angular/compose.yaml
@@ -6,5 +6,6 @@ services:
     ports:
       - 4200:4200
     volumes:
-      - ./angular:/project
-      - /project/node_modules
+      - type: bind
+        source: angualr
+        target: projet
